--- a/style.css
+++ b/style.css
@@ -1,78 +1,77 @@
-header{
+header{/*cabeçario*/
     grid-area: cabe;
     background-image: linear-gradient(to right, rgba(162, 104, 255, 0.726) , rgba(110, 5, 145, 0.7),rgb(0, 0, 0));/* faz um degrade da cor do elemento */
 }
-main{
+main{/*parte principal*/
     grid-area: prin;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(255, 255, 255, 0.5);/*cor transparente sobre imagem de fundo*/
 }
-footer{
+footer{/*rodapé*/
     grid-area: roda;
     background-image: linear-gradient(to right, rgba(162, 104, 255, 0.726) , rgba(110, 5, 145, 0.7),rgb(0, 0, 0));/* faz um degrade da cor do elemento */
 }
-body{
-    display: grid;
+body{/*corpo do texto*/
+    display: grid;/*disposiçao grid*/
     grid-template-areas: 
     "cabe cabe"
     "prin prin"
     "roda roda";
-    grid-template-rows: auto;
-    grid-template-columns: 300px auto;
+    grid-template-rows: auto;/*indica tamanho das linhas*/
+    grid-template-columns: 300px auto;/*indica tamanho das colunas*/
 }
-header img{
-    height: 150px;
-    width: auto;
+header img{/*logo*/
+    height: 150px;/*altura*/
+    width: auto;/*tamanho*/
+    display: flex;
 }
-@media only screen and (max-width: 820px) {
+@media only screen and (max-width: 820px) {/*para deixar responsivo*/
     body{
         grid-template-areas: 
         "cabe"
         "prin"
         "roda";
-        grid-template-columns: 1fr;
-        grid-template-rows: 200px 50px 500px 200px;
+        grid-template-columns: 1fr;/*indica tamanho das colunas*/
+        grid-template-rows: 200px auto 200px;/*indica tamanho das linhas*/
     }   
     footer img{
-        display: none;
+        display: none;/*nao mostrar a imagem do footer*/
     }
     footer{
-        display: none;
+        display: none;/*nao mostrar o rodape*/
     } 
 }
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 480px) {/*responsivo para celular*/
     body{
         grid-template-areas: 
         "cabe"
-        "prin"
-        "roda";
+        "prin";
         grid-template-columns: 1fr;
-        grid-template-rows: 100px 500px 100px;
+        grid-template-rows: 100px auto;
     }
     section{
         display: flex;
     }
-    header{
-        display: none;
-    }
-    
+    footer{
+        display: none;/*nao mostrar o rodape*/
+    }  
 }
-.correto{
+.correto{/*cor certa*/
     color: green;
 }
-.errada{
+.errada{/*cor errada*/
     color: red;
 }
-.vargas{
+.vargas{/*imagem logo cabeçalho*/
     width: 200px;
     border-radius: 20%;
     margin: 15px;
 }
-.vargas1{
+.vargas1{/*imagem logo rodape*/
     width: 250px;
     border-radius: 20%;
     margin: 15px;
 }
-.botao{
+.botao{/* dimensoes do botao*/
     border-radius: 10%;
     box-shadow: 5px 10px 15px rgb(184, 30, 240);
     width: 18%;
@@ -81,8 +80,12 @@ header img{
     margin: 24px;
 }
 .cor{
-    color: rgb(186, 138, 232);
+    color: rgb(186, 138, 232);/*cor dos titulos*/
 }
 .letra{
-    font-style: italic;
+    font-style: italic;/* fonte da letra*/
 }
+.fundo2{
+    background-image: url(imagem/fundo2.jpg);/*fundo do site*/
+}
+
